# gst-whitebalance

./: AUTHORS  COPYING  ChangeLog  README.md  autogen.sh  config.h.in  configure.ac  meson.build
src/: Makefile.am  gstwhitebalance.c  gstwhitebalance.h
